--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-Lochin Super Computer, [12.08.2022 20:26]
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello computer</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
