--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
                                     <div class="main-menu d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">                                                                                          
-                                                <li class="active" ><a href="index.html">Home</a></li>
-                                                <li><a href="courses.html">Courses</a></li>
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="#">Blog</a>
+                                                <li class="active" ><a href="index.html">Asosiy</a></li>
+                                                <li><a href="courses.html">Kurslar</a></li>
+                                                <li><a href="about.html">Biz haqimizda</a></li>
+                                                <li><a href="#">Resourslar</a>
                                                     <ul class="submenu">
-                                                        <li><a href="blog.html">Blog</a></li>
-                                                        <li><a href="blog_details.html">Blog Details</a></li>
-                                                        <li><a href="elements.html">Element</a></li>
+                                                        <li><a href="blog.html">Maqolalar</a></li>
+                                                        <li><a href="blog_details.html">Linklar</a></li>
+                                                        <li><a href="elements.html">IT yordam</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="contact.html">Contact</a></li>
+                                                <li><a href="contact.html">Bog'lanish</a></li>
                                                 <!-- Button -->
-                                                <li class="button-header margin-left "><a href="#" class="btn">Join</a></li>
+                                                <li class="button-header margin-left "><a href="http://myurls.co/hellocomputer1" class="btn">Info</a></li>
                                                 <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
                                             </ul>
                                         </nav>
