--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                             <ul id="navigation">                                                                                          
                                                 <li class="active" ><a href="index.html">Asosiy</a></li>
                                                 <li><a href="courses.html">Kurslar</a></li>
-                                                <li><a href="about.html">Biz haqimizda</a></li>
+                                                <li><a href="about.html">Portfolio</a></li>
                                                 <li><a href="#">Resourslar</a>
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">Maqolalar</a></li>
