--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                                 <li><a href="contact.html">Bog'lanish</a></li>
                                                 <!-- Button -->
                                                 <li class="button-header margin-left "><a href="http://myurls.co/hellocomputer1" class="btn">Info</a></li>
-                                                <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
+                                               <!-- <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li> -->
                                             </ul>
                                         </nav>
                                     </div>
