--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">Biz bilan zamonaviy <br> kasblarni o'rganing!</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">Kurslar aynan siz uchun! Hayotingizni yanada yaxshilash va muvaffaqiyatga erishish uchun imkoniyat</p>
-                                    <a href="+998949480110" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Juda oson</a>
+                                    <a href="tel:+998949480110" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Juda oson</a>
                                 </div>
                             </div>
                         </div>
