--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/gallery/about3.png" alt="">
+                        <img src="assets/img/gallery/Black_Logo_Mockup_Meeting_Room_White_Wall_Realistic.jpg" alt="">
                     </div>
                 </div>
                 <div class="left-content3">
