--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
                                         <nav>
                                             <ul id="navigation">                                                                                          
                                                 <li class="active" ><a href="index.html">Asosiy</a></li>
-                                                <li><a href="courses.html">Kurslar</a></li>
-                                                <li><a href="about.html">Portfolio</a></li>
+                                                <li><a href="#">Kurslar</a></li>
+                                                <li><a href="#">Portfolio</a></li>
                                                 <li><a href="#">Resourslar</a>
                                                     <ul class="submenu">
-                                                        <li><a href="blog.html">Maqolalar</a></li>
-                                                        <li><a href="blog_details.html">Linklar</a></li>
-                                                        <li><a href="elements.html">IT yordam</a></li>
+                                                        <li><a href="#">Maqolalar</a></li>
+                                                        <li><a href="#">Linklar</a></li>
+                                                        <li><a href="#">IT yordam</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="contact.html">Bog'lanish</a></li>
+                                                <li><a href="https://www.seelink.app/Rasuljon/Qyt6LAc3N5eksSF3if9Luj">Web saytlar</a></li>
                                                 <!-- Button -->
                                                 <li class="button-header margin-left "><a href="http://myurls.co/hellocomputer1" class="btn">Info</a></li>
                                                <!-- <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li> -->
