--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Jizzax &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://myurls.co/hellocomputer1" target="_blank">Hello Computer Team</a>
+                                  Jizzax &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa-solid fa-laptop"></i> by <a href="https://myurls.co/hellocomputer1" target="_blank">Hello Computer Team</a>
                                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                               </div>
                           </div>
