--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                                 <img src="assets/img/icon/icon1.svg" alt="">
                             </div>
                             <div class="features-caption">
-                                <h3>60+ UX courses</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <h3>100+ IT resourslar</h3>
+                                <p>Internet olamidagi eng foydali resourslar bilan tanishasiz!</p>
                             </div>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
                                 <img src="assets/img/icon/icon2.svg" alt="">
                             </div>
                             <div class="features-caption">
-                                <h3>Expert instructors</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <h3>Tajriba eng qisqa yo'ldir</h3>
+                                <p>Yillar davomida to'plangan tajribalarni ulashamiz</p>
                             </div>
                         </div>
                     </div>
@@ -142,8 +142,8 @@
                                 <img src="assets/img/icon/icon3.svg" alt="">
                             </div>
                             <div class="features-caption">
-                                <h3>Life time access</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <h3>Vaqt qadri</h3>
+                                <p>Yangi bilimlar vaqtingizni samarali o'tishini ta'minlaydi</p>
                             </div>
                         </div>
                     </div>
