--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-8">
                         <div class="single-services mb-30">
                             <div class="features-icon">
-                                <img src="assets/img/icon/icon2.svg" alt="">
+                                <img src="assets/img/icon/study.png" width="80" height="80" alt="">
                             </div>
                             <div class="features-caption">
                                 <h3>Tajriba eng qisqa yo'ldir</h3>
@@ -156,7 +156,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>Our featured courses</h2>
+                            <h2>Bizning kurslar</h2>
                         </div>
                     </div>
                 </div>
