--- a/index.html
+++ b/index.html
@@ -165,13 +165,12 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img overlay1">
-                                <a href="#"><img src="assets/img/gallery/featured1.png" alt=""></a>
+                                <a href="#"><img src="assets/img/gallery/new/Word1.jpg" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
-
+                                <p>Microsoft Office</p>
+                                <h3><a href="#">Microsoft Word Amaliy kursi</a></h3>
+                                <p>Microsoft Word (qisqacha MS Word, WinWord yoki Word) – matnli ma’lumotlarni yaratish, koʻrish va tahrir qilish uchun moʻljallangan matn muharriridir
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -179,16 +178,16 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half"></i>
+                                            <i class="far fa-star"></i>
+                                            <i class="far fa-star"></i>
                                         </div>
-                                        <p><span>(4.5)</span> based on 120</p>
+                                        <p><span>(60%)</span> darslar soni 10 ta</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>50 000</span>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Find out more</a>
+                                <a href="tel:+998949480110" class="border-btn border-btn2">Batafsil</a>
                             </div>
 
                         </div>
@@ -198,29 +197,29 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img overlay1">
-                                <a href="#"><img src="assets/img/gallery/featured2.png" alt=""></a>
+                                <a href="#"><img src="assets/img/gallery/new/Excell.jpg" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <p>Microsoft Office</p>
+                                <h3><a href="#">Microsoft Excell Amaliy kursi</a></h3>
+                                <p>Microsoft Excel — har xil ko'rinishdagi hisob—kitobli ma'lumotlar bilan ishlashga mo'ljallangan elektron jadvalli dastur <br><br><br>
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
                                         <div class="rating">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half"></i>
+                                            <i class="far fa-star"></i>
+                                            <i class="far fa-star"></i>
+                                            <i class="far fa-star"></i>
                                         </div>
-                                        <p><span>(4.5)</span> based on 120</p>
+                                        <p><span>(40%)</span> darslar soni 10 ta</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>50 000</span>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Find out more</a>
+                                <a href="tel:+998949480110" class="border-btn border-btn2">Batafsil</a>
                             </div>
                         </div>
                     </div>
@@ -229,12 +228,13 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img overlay1">
-                                <a href="#"><img src="assets/img/gallery/featured3.png" alt=""></a>
+                                <a href="#"><img src="assets/img/gallery/new/Powerpoint.jpg" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <p>Microsoft Office</p>
+                                <h3><a href="#">Microsoft PowerPoint Amaliy kursi</a></h3>
+                                <p>Microsoft PowerPoint — taqdimotlar yaratish va ularni tomosha qilishga 
+                                    moʻljallangan dastur. PowerPointda yaratilgan taqdimotlar proyektor yordamida katta ekranlarda yoki katta oʻlchamli televizion ekranlarda koʻrishga moʻljallangan.
 
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -243,16 +243,16 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half"></i>
+                                            <i class="far fa-star"></i>
+                                            <i class="far fa-star"></i>
                                         </div>
-                                        <p><span>(4.5)</span> based on 120</p>
+                                        <p><span>(60%)</span> darslar soni 10 ta</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>50 000</span>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Find out more</a>
+                                <a href="tel:+998949480110" class="border-btn border-btn2">Batafsil</a>
                             </div>
 
                         </div>
@@ -680,7 +680,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Jizzax &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa-solid fa-laptop"></i> by <a href="https://myurls.co/hellocomputer1" target="_blank">Hello Computer Team</a>
+                                  Jizzax &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-code" aria-hidden="true"></i> by <a href="https://myurls.co/hellocomputer1" target="_blank">Hello Computer Team</a>
                                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                               </div>
                           </div>
