post and profile image

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                             <div class="properties__caption">
                                 <p>Microsoft Office</p>
                                 <h3><a href="#">Microsoft Word Amaliy kursi</a></h3>
-                                <p>Microsoft Word (qisqacha MS Word, WinWord yoki Word) – matnli ma’lumotlarni yaratish, koʻrish va tahrir qilish uchun moʻljallangan matn muharriridir
+                                <p>Microsoft Word (qisqacha MS Word) – matnli ma’lumotlarni yaratish, koʻrish va tahrir qilish uchun moʻljallangan matn muharriridir.
+                                    Microsoft Word sizga professional sifatli hujjatlar, hisobotlar, xatlar va rezyumelar yaratish imkonini beradi.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -202,7 +203,9 @@
                             <div class="properties__caption">
                                 <p>Microsoft Office</p>
                                 <h3><a href="#">Microsoft Excell Amaliy kursi</a></h3>
-                                <p>Microsoft Excel — har xil ko'rinishdagi hisob—kitobli ma'lumotlar bilan ishlashga mo'ljallangan elektron jadvalli dastur <br><br><br>
+                                <p>Microsoft Excel — har xil ko'rinishdagi hisob—kitobli ma'lumotlar bilan ishlashga mo'ljallangan jadvalli dastur. 
+                                    Excel qatorlari va ustunlari katak deb ataladigan bo'shliqda kesishadi. 
+                                    Har bir katakga matn, raqamli qiymat yoki formula kabi maʼlumotlar kiritish mumkin.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -234,7 +237,7 @@
                                 <p>Microsoft Office</p>
                                 <h3><a href="#">Microsoft PowerPoint Amaliy kursi</a></h3>
                                 <p>Microsoft PowerPoint — taqdimotlar yaratish va ularni tomosha qilishga 
-                                    moʻljallangan dastur. PowerPointda yaratilgan taqdimotlar proyektor yordamida katta ekranlarda yoki katta oʻlchamli televizion ekranlarda koʻrishga moʻljallangan.
+                                    moʻljallangan dastur. PowerPointda yaratilgan taqdimotlar proyektor yordamida katta ekranlarda yoki katta oʻlchamli televizion ekranlarda koʻrishga moʻljallangan. <br>
 
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -262,12 +265,13 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img overlay1">
-                                <a href="#"><img src="assets/img/gallery/featured2.png" alt=""></a>
+                                <a href="#"><img src="assets/img/gallery/new/google.jpg" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <p>Internet</p>
+                                <h3><a href="#">Hello Internet Amaliy kursi</a></h3>
+                                <p>Internetdan samarali foydalanishni o'rganish. Qidiruv tizimlarda ingliz tilidan foydalanib muammolar yechimini topish. Eng yaxshi resourslarni o'zida 
+                                    jamlagan web saytlardan foydalanish. YouTube va boshqa ijtimoiy tarmoqlardagi foydali ma'lumotlardan o'rganishni davom ettirish. <br>
 
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -276,16 +280,16 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half"></i>
+                                            <i class="far fa-star"></i>
+                                            <i class="far fa-star"></i>
                                         </div>
-                                        <p><span>(4.5)</span> based on 120</p>
+                                        <p><span>(60%)</span> darslar soni 5</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>100 000</span>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Find out more</a>
+                                <a href="#" class="border-btn border-btn2">Batafsil</a>
                             </div>
 
                         </div>
@@ -305,10 +309,8 @@
                     <!-- section tittle -->
                     <div class="section-tittle section-tittle2 mb-55">
                         <div class="front-text">
-                            <h2 class="">Learn new skills online with top educators</h2>
-                            <p>The automated process all your website tasks. Discover tools and 
-                                techniques to engage effectively with vulnerable children and young 
-                            people.</p>
+                            <h2 class="">Biz sizlar bilan bilimlarni ulashishni istaymiz!</h2>
+                            <p>Agar siz hayotingizni yanada yaxshilashga va muvaffaqiyatga erishishni hoxlasangiz zamonaviy bilimlarni o'rganishni boshlang...</p>
                         </div>
                     </div>
                     <div class="single-features">
@@ -316,7 +318,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Techniques to engage effectively with vulnerable children and young people.</p>
+                            <p>Birinchi navbatda to'g'ri qaror qabul qiling. O'z hayotingizga oz bo'lsada investitsiya kiriting </p>
                         </div>
                     </div>
                     <div class="single-features">
@@ -324,7 +326,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Join millions of people from around the world  learning together.</p>
+                            <p>Biz sizlar bilan yillar davomida to'plangan tajribalarni bo'lishamiz. Asosiysi barchasi 0 dan boshlanadi</p>
                         </div>
                     </div>
 
@@ -333,7 +335,9 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Join millions of people from around the world learning together. Online learning is as easy and natural.</p>
+                            <p>Kurs yakunida siz bilimlar va imkoniyatlar juda ko'pligini his etasiz. O'z oldingizga maqsadlar qo'yib harakat qila boshlaysiz. Mehnat qilishdan 
+                                to'xtamasangiz bularning hammasi juda oddiy!
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -481,7 +485,7 @@
                     <!-- section tittle -->
                     <div class="section-tittle section-tittle2 mb-20">
                         <div class="front-text">
-                            <h2 class="">Learner outcomes on courses you will take</h2>
+                            <h2 class="">Bizdagi mavjud imkoniyatlar</h2>
                         </div>
                     </div>
                     <div class="single-features">
@@ -489,7 +493,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Techniques to engage effectively with vulnerable children and young people.</p>
+                            <p>Imkoniyat darajasida jihozlangan xona, shuningdek, eng kerakli bo'lgan kompyuterlar va cheksiz internet tarmog'i.</p>
                         </div>
                     </div>
                     <div class="single-features">
@@ -497,8 +501,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Join millions of people from around the world
-                            learning together.</p>
+                            <p>Siz qulay tarzda o'rganishingiz uchun turli xil resourslarni matn va suratlar ko'rinishida chop etilgan holatda taqdim etamiz.</p>
                         </div>
                     </div>
                     <div class="single-features">
@@ -506,8 +509,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Join millions of people from around the world learning together.
-                            Online learning is as easy and natural.</p>
+                            <p>Kursni yakunlaganingizdan keyin Hello Computer jamoasi a'zosiga aylanishingiz yoki doimiy muammolar yuzasidan jamoa a'zolari bilan bog'lanishingiz mumkin</p>
                         </div>
                     </div>
                 </div>
@@ -520,20 +522,20 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>Community experts</h2>
+                            <h2>Hello Computer Jamoasi</h2>
                         </div>
                     </div>
                 </div>
                 <div class="team-active">
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team1.png" alt="">
+                            <img src="assets/img/gallery/TeamPicture1.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Mr. Urela</a></h5>
-                            <p>The automated process all your website tasks.</p>
+                            <h5><a href="services.html">Rasuljon <br> Meliquziyev</a></h5>
+                            <p>Graphic designer</p>
                         </div>
-                    </div>
+                    <!-- </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
                             <img src="assets/img/gallery/team2.png" alt="">
@@ -569,7 +571,7 @@
                             <h5><a href="services.html">Mr. saiful</a></h5>
                             <p>The automated process all your website tasks.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
