--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <div class="main-menu d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">                                                                                          
-                                                <li class="active" ><a href="index.html">Asosiy</a></li>
+                                                <li class="active" ><a href="#">Asosiy</a></li>
                                                 <li><a href="#">Kurslar</a></li>
                                                 <li><a href="#">Portfolio</a></li>
                                                 <li><a href="#">Resourslar</a>
@@ -289,7 +289,7 @@
                                         <span>100 000</span>
                                     </div>
                                 </div>
-                                <a href="#" class="border-btn border-btn2">Batafsil</a>
+                                <a href="tel:+998949480110" class="border-btn border-btn2">Batafsil</a>
                             </div>
 
                         </div>
@@ -478,7 +478,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/gallery/Black_Logo_Mockup_Meeting_Room_White_Wall_Realistic.jpg" alt="">
+                        <img src="assets/img/gallery/photo_2022-08-19_14-22-29.jpg" alt="">
                     </div>
                 </div>
                 <div class="left-content3">
@@ -535,16 +535,16 @@
                             <h5><a href="services.html">Rasuljon <br> Meliquziyev</a></h5>
                             <p>Graphic designer</p>
                         </div>
-                    <!-- </div>
+                     </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team2.png" alt="">
+                            <img src="assets/img/gallery/TeamPicture2.png" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Mr. Uttom</a></h5>
-                            <p>The automated process all your website tasks.</p>
+                            <h5><a href="services.html">Lochinbek <br> Abduvoitov</a></h5>
+                            <p>Web dasturchi</p>
                         </div>
-                    </div>
+                    <!-- </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
                             <img src="assets/img/gallery/team3.png" alt="">
@@ -582,19 +582,17 @@
                 <div class="right-content2">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/gallery/about2.png" alt="">
+                        <img src="assets/img/gallery/Black_Logo_Mockup_Meeting_Room_White_Wall_Realistic.jpg" alt="">
                     </div>
                 </div>
                 <div class="left-content2">
                     <!-- section tittle -->
                     <div class="section-tittle section-tittle2 mb-20">
                         <div class="front-text">
-                            <h2 class="">Take the next step
-                                toward your personal
-                                and professional goals
-                            with us.</h2>
-                            <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.</p>
-                            <a href="#" class="btn">Join now for Free</a>
+                            <h2 class="">Biz bilan birga shaxsiy va mukammal maqsadlaringiz sari qadam tashlang</h2>
+                            <p>Har kim bilim olish huquqiga ega ekanligi qonunlarimizda belgilab qo'yilgan. Bizning maqsadimiz o'z hududimizdan boshlanadi ya'ni 2025 yilga kelib
+                                Jizzaxda kompyuterni tushunmaydigan undan profesional darajada foydalanmaydigan yoshlar qolmasligiga harakat qilamiz! </p>
+                            <a href="https://forms.gle/pVNS9c9mLFLgbz1j8" class="btn">Izoh qoldirish...</a>
                         </div>
                     </div>
                 </div>
