--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                                                         <li><a href="#">IT yordam</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="https://www.seelink.app/Rasuljon/Qyt6LAc3N5eksSF3if9Luj">Web saytlar</a></li>
+                                                <li><a href="https://www.seelink.app/Rasuljon/Qyt6LAc3N5eksSF3if9Luj" target="_blank" >Web saytlar</a></li>
                                                 <!-- Button -->
-                                                <li class="button-header margin-left "><a href="http://myurls.co/hellocomputer1" class="btn">Info</a></li>
+                                                <li class="button-header margin-left "><a href="http://myurls.co/hellocomputer1" target="_blank" class="btn">Info</a></li>
                                                <!-- <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li> -->
                                             </ul>
                                         </nav>
@@ -465,7 +465,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-12">
                         <div class="section-tittle text-center mt-20">
-                            <a href="courses.html" class="border-btn">View More Subjects</a>
+                            <a href="#" class="border-btn">Ko'proq ma'lumot uchun</a>
                         </div>
                     </div>
                 </div>
