--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>Explore top subjects</h2>
+                            <h2>Keyingi qadamlarimiz</h2>
                         </div>
                     </div>
                 </div>
@@ -371,7 +371,7 @@
                                 <img src="assets/img/gallery/topic1.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Dasturlash</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -383,7 +383,7 @@
                                 <img src="assets/img/gallery/topic2.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Grafik dizayn</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -395,7 +395,7 @@
                                 <img src="assets/img/gallery/topic3.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#"> Web dizayn</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -407,7 +407,7 @@
                                 <img src="assets/img/gallery/topic4.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">3D modeling</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -419,7 +419,7 @@
                                 <img src="assets/img/gallery/topic5.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Motion dizayn</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -431,7 +431,7 @@
                                 <img src="assets/img/gallery/topic6.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">SMM</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -443,7 +443,7 @@
                                 <img src="assets/img/gallery/topic7.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Robototexnika</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -455,7 +455,7 @@
                                 <img src="assets/img/gallery/topic8.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">IT english</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -465,7 +465,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-12">
                         <div class="section-tittle text-center mt-20">
-                            <a href="#" class="border-btn">Ko'proq ma'lumot uchun</a>
+                            <a href="tel:+998949480110" class="border-btn">Ko'proq ma'lumot uchun</a>
                         </div>
                     </div>
                 </div>
